# moos-ivp-greece

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  athens_rs2.txt  athens_rs3.txt  grades.txt
documentation/: 00_README.md  00_secrets.template.md  00_style_guide.md  01_fleet_and_network_reference.md  02_shoreside_infrastructure.md  10_mechanical_assembly.md  11_electrical_wiring.md  12_doodle_labs_radio.md  12b_doodle_labs_radio_reference.md  13_frontseat_first_boot.md  14_um982_gps.md  14b_um982_reference.md  15_rc_controller.md  16_software_build.md  17_calibration.md  20_qc_signoff.md  30_field_operations.md  ATS9Pro.md  Doodle_Labs_Radio_Guide.md  QC_Build_Checklist.md  README.md  UM982_BlueBoat_Configuration_Recommendations.md  first_boot.md  greece_specific_networking.md
info_tifs/: athens_carto_db_20.info  athens_hgoo_20.info  athens_sgoo_20.info  athens_thgoo_20.info
missions/alder/: README
missions/alpha_greece/: README.md  launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/blueboat_dynamics/: launch.sh  launch_difftuner.sh  launch_shoreside.sh  launch_tuner.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pMarineViewer.moos
missions/encircle_swarm/: README.md  launch.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  (+2 more)
scripts/: bb_init.sh  bb_led.sh  get_robot_info_greece.sh
src/: CMakeLists.txt
src/pBB_AthensLogger/: BB_AthensLogger.cpp  BB_AthensLogger.h  BB_AthensLogger_Info.cpp  BB_AthensLogger_Info.h  CMakeLists.txt  main.cpp  pBB_AthensLogger.moos
(+137 files in other folders)
